--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-sidebar": "^3.0.2",
+    "react-sortable-hoc": "^2.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
