--- a/backend-dynamic-form/pom.xml
+++ b/backend-dynamic-form/pom.xml
@@ -12,7 +12,13 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
-
+<!--    mvb spring-boot:run-->
+<!--    mvn org.springframework.boot:spring-boot-maven-plugin:run-->
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.6.1</version>
+    </parent>
 
     <dependencies>
 
