--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-dnd": "^14.0.4",
     "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "^17.0.2",
+    "react-notifications": "^1.7.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-sidebar": "^3.0.2",
