--- a/backend-dynamic-form/src/main/resources/application.properties
+++ b/backend-dynamic-form/src/main/resources/application.properties
@@ -2,3 +2,4 @@
 spring.data.mongodb.host=db
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=dynamicform
+spring.sql.init.continue-on-error=true
